# taglib-rust

./: .gitignore  Cargo.toml
examples/: tagreader.rs
fixtures/: test.flac
src/: lib.rs
taglib-sys/: Cargo.toml  build.rs
taglib-sys/src/: lib.rs
